Aktualisiert: Domänenname für das Projekt (Filme und Serien im Kontext einer Streamingplattform)

--- a/kustomize/base/serviceaccount.yaml
+++ b/kustomize/base/serviceaccount.yaml
@@ -15,6 +15,7 @@
 
 ---
 # https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
+#TODO: An Domäne anpassen
 apiVersion: v1
 kind: ServiceAccount
 metadata:
