--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -29,6 +29,7 @@ sonar.exclusions = \
   restclient/**/*,\
   tmp/**/*
 
+#TODO: An Domäne anpassen
 sonar.projectKey = buch-server
 
 sonar.login = ?????
