--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -30,7 +30,7 @@ sonar.exclusions = \
   tmp/**/*
 
 #TODO: An Domäne anpassen
-sonar.projectKey = buch-server
+sonar.projectKey = film-server
 
 sonar.login = ?????
 sonar.password = ?????
