--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -20,7 +20,7 @@ kind: Kustomization
 namespace: acme
 
 configMapGenerator:
-  - name: buch-env
+  - name: film-env
     literals:
       - TZ=Europe/Berlin
 
