--- a/kustomize/base/service.yaml
+++ b/kustomize/base/service.yaml
@@ -20,11 +20,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: buch
+  name: film
   labels:
-    app: buch
+    app: film
 spec:
   selector:
-    app: buch
+    app: film
   ports:
     - port: 3000
