--- a/kustomize/base/serviceaccount.yaml
+++ b/kustomize/base/serviceaccount.yaml
@@ -19,6 +19,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: acme-buch
+  name: acme-film
   labels:
-    account: buch
+    account: film
