Konfigurationsanspassung Jenkins und Mailserver

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -29,7 +29,7 @@ sonar.exclusions = \
   restclient/**/*,\
   tmp/**/*
 
-#TODO: An Domäne anpassen
+#TODO: An Domaene anpassen
 sonar.projectKey = film-server
 
 sonar.login = ?????
