--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -14,6 +14,7 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 # Aufruf:   docker-compose -f jenkins.yaml up
+#           docker-compose -f jenkins.yaml down
 #           docker-compose down
 #           docker-compose -f jenkins.yaml exec jenkins bash
 
@@ -43,10 +44,12 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.5"
-          memory: 512M
+          # cpus: "0.5"
+          cpus: "1.0"
+          # memory: 512M
+          memory: 1024M
   jenkins:
-    image: jenkinsci/blueocean:1.24.4
+    image: jenkinsci/blueocean:1.24.5
     ports:
       - published: 9090
         target: 8080
