Package.json aktualisiert

--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "docker-build": "ts-node scripts/docker-build",
     "clinic": "clinic doctor -- node dist/server.js",
     "clean": "ts-node scripts/clean",
-    "curl:heroku": "curl --include --tlsv1.2 --insecure https://fathomless-caverns-91920.herokuapp.com/filme/00000000-0000-0000-0000-000000000001",
+    "curl:heroku:taner": "curl --include --tlsv1.2 --insecure https://stark-falls-32779.herokuapp.com/filme/00000000-0000-0000-0000-000000000001",
     "curl:openshift": "curl --include http://beispiel-jz.apps.us-east-1.starter.openshift-online.com:3000/filme/00000000-0000-0000-0000-000000000001",
     "depcheck": "depcheck",
-    "deploy:heroku": "git push heroku master",
+    "deploy:heroku": "git push heroku main",
     "deploy:openshift": "npm run deploy:prepare && npm exec nodeshift --expose --deploy.port 3000",
     "deploy:prepare": "concurrently --prefix \"[{name}]\" --names \"ESLint,ejs-lint,init-dist,TypeScript\" --prefix-colors \"yellow.bold,gray.bold,cyan.bold,green.bold\" \"npm run eslint\" \"npm run ejs-lint\" \"npm run init-dist\" \"npm run tsc\"",
     "ejs-lint": "node ./node_modules/ejs-lint/index.js",
     "eslint": "eslint src/**/*.ts",
     "init-dist": "ts-node scripts/init-dist",
     "leasot": "leasot --exit-nicely src/**/*.ts",
-    "open:heroku": "heroku open --app fathomless-caverns-91920 /api/filme/00000000-0000-0000-0000-000000000001",
-    "open:heroku:file": "heroku open --app fathomless-caverns-91920 /api/filme/00000000-0000-0000-0000-000000000001/file",
-    "open:heroku:html": "heroku open --app fathomless-caverns-91920 /html/suche",
-    "open:heroku:playground": "heroku open --app fathomless-caverns-91920 /api",
+    "open:heroku:taner": "heroku open --app stark-falls-32779 /api/filme/00000000-0000-0000-0000-000000000001",
+    "open:heroku:file:taner": "heroku open --app stark-falls-32779 /api/filme/00000000-0000-0000-0000-000000000001/file",
+    "open:heroku:html:taner": "heroku open --app stark-falls-32779 /html/suche",
+    "open:heroku:playground:taner": "heroku open --app stark-falls-32779 /api",
     "port-forward": "ts-node scripts/port-forward",
     "prettier": "prettier --write src/**/*.ts scripts/*.?s test/**/*.ts",
     "revealjs": "asciidoctor-revealjs doc/folien/folien.adoc",
